# check-depz

./: check_dependencies.py  pyproject.toml  readme.md  release.sh
.github/workflows/: ci.yml  release.yml
check_dependencies/: check_dependencies.py
check_depz/: check_dependencies.py
