[project]
name = "check-dependencies"
version = "0.3.0"
description = ""
authors = [
    {name = "Henryk Konsek",email = "hekonsek@gmail.com"}
]
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
check-dependencies = "check_dependencies.check_dependencies:main"